<resources>

    <!--    Other-->
    <string name="menu_played">Spelade drycker</string>
    <string name="action_settings">settings</string>
    <string name="next_step">Nästa steg</string>
    <string name="empty"> </string>
    <string name="analysed_drinks">Analyserade drycker</string>
    <string name="instructions">
        “Vad Säger Systemet?” går ut på att samlas ett gäng personer och analysera och dricka god dryck tillsammans, samtidigt som man även kan göra det till en tävling. Det går ut på att svara på frågor inom 4 olika kategorier och matcha sina svar i hur drycken är beskriven på Systembolagets hemsida. Systembolaget är facit!
        \n\n
        OBS! Endast öl är än så länge implementerat.
        \n\n
        1. Börja med att ta fram den öl du tänker testa.\n
        2. Klicka på “öl” och fyll i svar på frågorna.\n
        3. Spara ner analysen.\n
        4. Skanna sedan ölens sträckkod i systembolagets app och jämför dina svar med systembolagets beskrivning.\n
        5. Räkna ihop antal rätt!
    </string>

    <!--    HomeFragment-->
    <string name="app_name">Vad Säger Systemet?</string>
    <string name="btn_beer">Öl</string>
    <string name="btn_wine">Vin</string>
    <string name="btn_liquor">Sprit</string>
    <string name="btn_other">Annat</string>
    <string name="home_title">Vad dricker du?</string>
    <string name="home_how">Hur spelar man?</string>
    <string name="btn_info">i</string>

    <!--    BeerNameFragment-->
    <string name="first_state">1 / 4</string>
    <string name="which_beer">Vilken öl?</string>
    <string name="name_beer">Vad heter ölen?</string>
    <string name="img_beer">Lägg till en bild på ölen.</string>

    <!--    FlavorFragment -->
    <string name="second_state">2 / 4</string>
    <string name="flavors">Smaker</string>
    <string name="beer_flavors">Ölens smaker?</string>
    <string name="bitter">Beska</string>
    <string name="fullness">Fyllighet</string>
    <string name="sweetness">Sötma</string>

    <!--    ServeFragment-->
    <string name="third_state">3 / 4</string>
    <string name="serve">Serveras</string>
    <string name="serve_to">Serveras till?</string>

    <!--    DescriptionFragment-->
    <string name="forth_state">4 / 4</string>
    <string name="description">Beskrivning</string>
    <string name="described_as">Beskriven som?</string>
    <string name="descr_word_1">Ett beskrivande ord</string>
    <string name="descr_word_other">Ett annat beskrivande ord</string>
    <string name="descr_word_last">Ett sista beskrivande ord</string>
    <string name="descr_1">1.</string>
    <string name="descr_2">2.</string>
    <string name="descr_3">3.</string>
    <string name="descr_4">4.</string>
    <string name="descr_5">5.</string>
    <string name="to_summary">Till sammanfattning</string>

    <!--    summary-->
    <string name="summary">Sammanfattning</string>
    <string name="sum_served_to">Serveras till:</string>
    <string name="sum_described_as">Beskriven som:</string>
    <string name="save_analysis">Spara analys</string>
    <string name="num_placeholder">0</string>
    <string name="beer_img_description">Image of analysed beer</string>
    <string name="beer_name_PH">Ölens namn</string>
    <string name="description_PH">Frisk</string>

    <!--    camera -->
    <string name="take_photo">Ta bild</string>
    <string name="start_capture">Spela in</string>
    <string name="stop_capture">Sluta spela in</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    Google API-->
    <string name="web_client_id">649260000154-06p3eb46bjn97s9r35fmc314me5djlm1.apps.googleusercontent.com</string>

    <!--    Login-->
    <string name="nickname">Användarnamn</string>
    <string name="login">Logga in</string>
    <string name="log_out">Logga ut</string>
    <string name="no_account">Ingen användare?</string>

    <!--    sign up-->
    <string name="new_sign_up">Registrera ny användare</string>
    <string name="sign_up">Registrera</string>
    <string name="sign_you_up">Registrera dig!</string>
    <string name="email">E-mail</string>
    <string name="full_name">Förnamn &amp; efternamn</string>

    <!--    choose type game-->
    <string name="choose_game">Välj spel att starta</string>
    <string name="single">Singelspel</string>
    <string name="join">Anslut till befintligt spel</string>
    <string name="create">Skapa spel för flera deltagare</string>
    <string name="join_word">Anslut</string>
    <string name="join_code">Anslutningskod</string>
    <string name="game_name">Namn på spelet</string>
    <string name="create_word">Skapa</string>
    <string name="start_game">Starta spelet</string>
    <string name="connected_players">Anslutna spelare</string>
    <string name="default_code">03482673</string>
    <string name="default_user">text123</string>

    <!--    wait    -->
    <string name="wait">Väntar</string>
    <string name="wait_join">Väntar på att spelet ska starta …</string>
    <string name="waiting_for">Väntar på:</string>
    <string name="done">Klar</string>

</resources>