<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="654dp"
    android:background="@color/light_gray"
    android:paddingTop="20dp"
    android:paddingStart="20dp"
    android:paddingEnd="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/gray_text"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/gray_text"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/btn_beer"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@drawable/default_btn"
            android:text="@string/btn_beer"
            android:textColor="@color/white"
            android:layout_marginEnd="10dp"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btn_wine"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@drawable/default_btn"
            android:text="@string/btn_wine"
            android:textColor="@color/white"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/btn_liquor"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@drawable/default_btn"
            android:text="@string/btn_liquor"
            android:textColor="@color/white"
            android:layout_marginEnd="10dp"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btn_other"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@drawable/default_btn"
            android:text="@string/btn_other"
            android:textColor="@color/white"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_how"
        android:textColor="@color/green"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="start"/>

    <Button
        android:id="@+id/btn_info"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="30dp"
        android:background="@drawable/information_circle"
        android:text="@string/btn_info"
        android:textSize="20sp"
        android:textColor="@color/green"
        android:textAllCaps="false"
        android:layout_gravity="start"/>

    <Button
        android:id="@+id/btn_log_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_out"
        android:background="@drawable/default_btn"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:layout_gravity="start"
        android:textSize="11sp"/>

    </LinearLayout>

</LinearLayout>