<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    android:paddingTop="20dp"
    android:paddingStart="20dp"
    android:paddingEnd="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/first_state"
        android:textColor="@color/gray_text"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/which_beer"
        android:textSize="20sp"
        android:layout_marginBottom="50dp"
        android:textStyle="bold"
        android:textColor="@color/gray_text"/>

    <Button
        android:layout_width="250dp"
        android:layout_height="300dp"
        android:text="@string/img_beer"
        android:textColor="@color/gray_text"
        android:background="@color/dim_green"
        android:layout_gravity="center"
        android:layout_marginBottom="50dp"/>


    <EditText
        android:id="@+id/beer_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="text"
        android:hint="@string/name_beer"
        android:textColor="@color/green"
        android:textColorHint="@color/green"
        android:background="@color/white"
        android:padding="10dp"
        android:autofillHints="autoFill" />
</LinearLayout>