<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="654dp"
    android:background="@color/light_gray"
    android:paddingTop="20dp"
    android:paddingStart="20dp"
    android:paddingEnd="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/gray_text"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/join"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/gray_text"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <EditText
            android:id="@+id/join_code"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:inputType="text"
            android:hint="@string/join_code"
            android:textColor="@color/gray_text"
            android:textSize="15sp"
            android:textColorHint="@color/gray_text"
            android:padding="10dp"
            android:autofillHints="autoFill"
            android:background="@drawable/edit_text_border"/>

        <Button
            android:id="@+id/btn_join"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/default_btn"
            android:text="@string/join_word"
            android:textColor="@color/white"/>

    </LinearLayout>

</LinearLayout>