<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="654dp"
    android:background="@color/light_gray"
    android:paddingTop="20dp"
    android:paddingStart="20dp"
    android:paddingEnd="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/gray_text"/>

    <TextView
        android:id="@+id/game_name_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/join"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/gray_text"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:paddingTop="50dp">

        <TextView
            android:id="@+id/game_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_code"
            android:textSize="40sp"
            android:textStyle="bold"
            android:textColor="@color/green"
            android:layout_marginBottom="50dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connected_players"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/green"
                android:layout_gravity="start"
                android:layout_marginEnd="10dp"/>

            <TextView
                android:id="@+id/number_of_players"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_code"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/green"
                android:layout_gravity="end"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@drawable/information_popup"
            android:padding="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/con_player_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_user"
                android:textColor="@color/gray_text"
                android:textSize="17sp"/>

        </LinearLayout>

        <Button
            android:id="@+id/btn_start_game"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/default_btn"
            android:text="@string/start_game"
            android:textColor="@color/white"/>

    </LinearLayout>

</LinearLayout>