<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="654dp"
    android:background="@color/light_gray"
    android:paddingTop="20dp"
    android:paddingStart="20dp"
    android:paddingEnd="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/second_state"
        android:textColor="@color/gray_text"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/flavors"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/gray_text"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:orientation="vertical"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/beer_flavors"
            android:textColor="@color/green"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bitter"
                android:layout_marginEnd="22dp"
                android:textColor="@color/gray_text"/>

            <com.google.android.material.slider.RangeSlider
                android:valueFrom="0.0"
                android:valueTo="8.0"
                android:stepSize="1.0"
                android:layout_height="wrap_content"
                android:layout_width="250dp"
                android:theme="@style/MyMaterialTheme"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fullness"
                android:layout_marginEnd="10dp"
                android:textColor="@color/gray_text"/>

            <com.google.android.material.slider.RangeSlider
                android:valueFrom="0.0"
                android:valueTo="8.0"
                android:stepSize="1.0"
                android:layout_height="wrap_content"
                android:layout_width="250dp"
                android:theme="@style/MyMaterialTheme"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sweetness"
                android:layout_marginEnd="22dp"
                android:textColor="@color/gray_text"/>

            <com.google.android.material.slider.RangeSlider
                android:valueFrom="0.0"
                android:valueTo="8.0"
                android:stepSize="1.0"
                android:layout_height="wrap_content"
                android:layout_width="250dp"
                android:theme="@style/MyMaterialTheme"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_next_step"
        android:layout_width="140dp"
        android:layout_height="45dp"
        android:layout_gravity="end"
        android:background="@drawable/default_btn"
        android:text="@string/next_step"
        android:textColor="@color/white"/>

</LinearLayout>