<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    android:paddingTop="20dp"
    android:paddingStart="20dp"
    android:paddingEnd="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_sign_up"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/gray_text"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nickname"
            android:textColor="@color/green"
            android:layout_gravity="start"/>

        <EditText
            android:id="@+id/sign_up_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/edit_text_border"
            android:textColor="@color/gray_text"
            android:textSize="15sp"
            android:padding="10dp"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/full_name"
            android:textColor="@color/green"
            android:layout_gravity="start"/>

        <EditText
            android:id="@+id/sign_up_full_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/edit_text_border"
            android:textColor="@color/gray_text"
            android:textSize="15sp"
            android:padding="10dp"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/green"
            android:layout_gravity="start"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/edit_text_border"
            android:textColor="@color/gray_text"
            android:textSize="15sp"
            android:padding="10dp"/>

        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="140dp"
            android:layout_height="45dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/default_btn"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textAllCaps="false"/>

    </LinearLayout>

</LinearLayout>